[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Level_1_Scripts/fire_ball_spawner.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Level_1_Prefabs/Hazards/fire_ball.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="fire_ball_spawner_node" type="Node2D"]
script = ExtResource( 1 )
fire_ball_scene = ExtResource( 2 )
min_shoot_time = 1.5
max_shoot_time = 1.5

[node name="fire_ball_spawner" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire_ball_spawner"]
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="fire_ball_spawner"]
position = Vector2( 5, -226 )
scale = Vector2( 13.9, 24 )

[node name="shoot_ready" type="Timer" parent="fire_ball_spawner"]
one_shot = true

[connection signal="screen_entered" from="fire_ball_spawner/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="fire_ball_spawner/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="fire_ball_spawner/shoot_ready" to="." method="_on_shoot_ready_timeout"]
